--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pancakes-cli",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "A CLI tool to scaffold, build, and publish TypeScript libraries with ease — like flipping pancakes.",
   "keywords": [
     "cli",
@@ -24,7 +24,7 @@
   "bin": {
     "pancakes-cli": "dist/cli.js"
   },
-  "main": "src/cli.ts",
+  "main": "dist/cli.js",
   "scripts": {
     "start": "node --import=tsx src/cli.ts",
     "build": "bun build src/cli.ts --outfile dist/cli.js --target=node --format=esm --minify && echo '#!/usr/bin/env node' | cat - dist/cli.js > dist/tmp && mv dist/tmp dist/cli.js",
@@ -34,6 +34,7 @@
   "author": "azcpcf <99.a.cpcf.r.99@gmail.com>",
   "license": "ISC",
   "type": "module",
+  "pancakes-cli": true,
   "devDependencies": {
     "@types/minimist": "^1.2.5",
     "@types/node": "^24.5.2",
@@ -53,7 +54,6 @@
     "colorette": "^2.0.20",
     "minimist": "^1.2.8",
     "nanospinner": "^1.2.2",
-    "pancakes-cli": "file:pancakes-cli-1.0.0.tgz",
     "prompts": "^2.4.2",
     "tsx": "^4.20.6"
   }
