--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "outDir": "./dist",
+    "allowJs": true,
     "rootDir": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "importHelpers": true
   },
   "include": ["src"]
 }
