--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pancakes-cli",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "files": [
     "dist"
   ],
@@ -22,15 +22,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/pancakes-ui/pancakes-cli"
+    "url": "git+https://github.com/pancakes-ui/pancakes-cli.git"
   },
   "bin": {
-    "pancakes-cli": "dist/cli.cjs"
+    "pancakes-cli": "dist/index.cjs"
   },
-  "main": "dist/cli.cjs",
+  "main": "dist/index.cjs",
   "scripts": {
-    "start": "node --import=tsx src/cli.ts",
-    "build": "tsup src/cli.ts --format cjs --dts --clean --minify",
+    "start": "node --import=tsx",
+    "build": "tsup src/index.ts --format cjs --dts --clean --minify",
     "test": "jest --silent",
     "commit": "cz"
   },
@@ -43,26 +43,23 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "colorette": "^2.0.20",
-    "minimist": "^1.2.8",
-    "nanospinner": "^1.2.2",
-    "prompts": "^2.4.2",
-    "semver": "^7.7.2"
-  },
   "devDependencies": {
-    "@types/minimist": "^1.2.5",
-    "@types/node": "^24.5.2",
     "@types/prompts": "^2.4.9",
-    "@types/semver": "^7.7.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "@types/jest": "^30.0.0",
-    "jest": "^30.2.0",
-    "ts-jest": "^29.4.4",
-    "npm": "^11.6.1",
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "bugs": {
+    "url": "https://github.com/pancakes-ui/pancakes-cli/issues"
+  },
+  "homepage": "https://github.com/pancakes-ui/pancakes-cli#readme",
+  "dependencies": {
+    "pancakes-cli": "^1.2.4",
+    "prompts": "^2.4.2"
   }
 }
