--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "node --import=tsx",
     "build": "tsup src/index.ts --format cjs --dts --clean --minify",
-    "test": "jest --silent",
+    "test": "vitest",
     "commit": "cz"
   },
   "author": "azcpcf <99.a.cpcf.r.99@gmail.com>",
@@ -45,11 +45,14 @@
   },
   "devDependencies": {
     "@types/prompts": "^2.4.9",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "tsup": "^8.5.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "directories": {
     "test": "test"
